5.ingress/2.multi/4.ingress-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: delivery

  # 경로를 새롭게 만들어준다. /member -> / 변경하여 service 연결
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  #- host: <Host>
   - http:
      paths:
      - pathType: Prefix
        path: /board
        backend:
          service:
            name: board-svc
            port: 
              number: 10000
      - pathType: Prefix
        path: /member
        backend:
          service:
            name: member-svc
            port: 
              number: 10000
